--- a/platformio.ini
+++ b/platformio.ini
@@ -3,9 +3,14 @@ src_dir = .
 default_envs = compile_only_esp32s3
 
 [env]
-platform = espressif32
+platform = espressif32@6.12.0
 framework = arduino
 extra_scripts = pre:scripts/generate_version.py
+platform_packages =
+  framework-arduinoespressif32 @ ~3.20017.0
+
+lib_deps =
+  makuna/NeoPixelBus@2.7.6
 
 monitor_speed = 115200
 monitor_filters = send_on_enter, esp32_exception_decoder, colorize
@@ -21,6 +26,10 @@ build_flags =
   -Iinclude
   -DCORE_DEBUG_LEVEL=0
   -DLOG_LEVEL=2
+  ; Backend selection (choose one):
+  ; -DSTATUSLED_BACKEND_NEOPIXELBUS=1
+  ; -DSTATUSLED_BACKEND_IDF_WS2812=1
+  -DSTATUSLED_BACKEND_NEOPIXELBUS=1
   ; Production monitoring (uncomment as needed):
   ; -DCONFIG_FREERTOS_USE_TRACE_FACILITY=1
   ; -DCONFIG_FREERTOS_USE_STATS_FORMATTING_FUNCTIONS=1
@@ -73,6 +82,7 @@ build_src_filter =
   +<examples/00_compile_only/**>
   +<src/**>
   +<include/**>
+  -<src/YourLib.cpp>
 
 ; 00_compile_only - Minimal skeleton (S2)
 [env:compile_only_esp32s2]
@@ -83,6 +93,7 @@ build_src_filter =
   +<examples/00_compile_only/**>
   +<src/**>
   +<include/**>
+  -<src/YourLib.cpp>
 
 ; 01_basic_bringup_cli - Interactive CLI (S3)
 [env:cli_esp32s3]
@@ -90,9 +101,10 @@ extends = esp32s3dev
 board = esp32-s3-devkitc-1
 build_src_filter =
   -<*>
-  +<examples/01_basic_bringup_cli/**>
+  +<examples/01_status_led_cli/**>
   +<src/**>
   +<include/**>
+  -<src/YourLib.cpp>
 
 ; 01_basic_bringup_cli - Interactive CLI (S2)
 [env:cli_esp32s2]
@@ -100,6 +112,20 @@ extends = esp32s2dev
 board = esp32-s2-saola-1
 build_src_filter =
   -<*>
-  +<examples/01_basic_bringup_cli/**>
+  +<examples/01_status_led_cli/**>
   +<src/**>
   +<include/**>
+  -<src/YourLib.cpp>
+
+; -------------------------
+; Native unit tests
+; -------------------------
+[env:native]
+platform = native
+build_flags =
+  -DSTATUSLED_BACKEND_NULL=1
+  -DSTATUSLED_TEST=1
+build_src_filter =
+  +<src/**>
+  -<src/YourLib.cpp>
+test_build_project_src = yes
