Refactor CI configuration and remove compile-only examples; update README and changelog

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
 src_dir = .
-default_envs = compile_only_esp32s3
+default_envs = cli_esp32s3
 
 [env]
 platform = espressif32@6.12.0
@@ -73,29 +73,7 @@ build_flags =
 ; Build specific examples
 ; -------------------------
 
-; 00_compile_only - Minimal skeleton (S3)
-[env:compile_only_esp32s3]
-extends = esp32s3dev
-board = esp32-s3-devkitc-1
-build_src_filter =
-  -<*>
-  +<examples/00_compile_only/**>
-  +<src/**>
-  +<include/**>
-  -<src/YourLib.cpp>
-
-; 00_compile_only - Minimal skeleton (S2)
-[env:compile_only_esp32s2]
-extends = esp32s2dev
-board = esp32-s2-saola-1
-build_src_filter =
-  -<*>
-  +<examples/00_compile_only/**>
-  +<src/**>
-  +<include/**>
-  -<src/YourLib.cpp>
-
-; 01_basic_bringup_cli - Interactive CLI (S3)
+; 01_status_led_cli - Interactive CLI (S3)
 [env:cli_esp32s3]
 extends = esp32s3dev
 board = esp32-s3-devkitc-1
@@ -104,9 +82,8 @@ build_src_filter =
   +<examples/01_status_led_cli/**>
   +<src/**>
   +<include/**>
-  -<src/YourLib.cpp>
 
-; 01_basic_bringup_cli - Interactive CLI (S2)
+; 01_status_led_cli - Interactive CLI (S2)
 [env:cli_esp32s2]
 extends = esp32s2dev
 board = esp32-s2-saola-1
@@ -115,7 +92,6 @@ build_src_filter =
   +<examples/01_status_led_cli/**>
   +<src/**>
   +<include/**>
-  -<src/YourLib.cpp>
 
 ; -------------------------
 ; Native unit tests
@@ -127,5 +103,4 @@ build_flags =
   -DSTATUSLED_TEST=1
 build_src_filter =
   +<src/**>
-  -<src/YourLib.cpp>
 test_build_project_src = yes
