Refactor StatusLed backend structure and improve code organization; define LedState within StatusLed namespace

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ build_flags =
   -Iinclude
   -DCORE_DEBUG_LEVEL=0
   -DLOG_LEVEL=2
+  -Wno-missing-field-initializers
   ; Backend selection (choose one):
   ; -DSTATUSLED_BACKEND_NEOPIXELBUS=1
   ; -DSTATUSLED_BACKEND_IDF_WS2812=1
@@ -103,4 +104,4 @@ build_flags =
   -DSTATUSLED_TEST=1
 build_src_filter =
   +<src/**>
-test_build_project_src = yes
+test_build_src = yes
