Enhance CI configuration and documentation; update backend options and add unit tests for LED modes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,10 @@ jobs:
     strategy:
       matrix:
         environment:
-          - cli_esp32s3
-          - cli_esp32s2
+          - cli_esp32s3_idf
+          - cli_esp32s2_idf
+          - cli_esp32s3_neopixelbus
+          - cli_esp32s2_neopixelbus
       fail-fast: false
 
     steps:
