--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,13 @@
 [platformio]
 src_dir = .
-default_envs = cli_esp32s3
+default_envs = cli_esp32s3_idf
 
-[env]
+[env:base]
 platform = espressif32@6.12.0
 framework = arduino
 extra_scripts = pre:scripts/generate_version.py
 platform_packages =
   framework-arduinoespressif32 @ ~3.20017.0
-
-lib_deps =
-  makuna/NeoPixelBus@2.7.6
 
 monitor_speed = 115200
 monitor_filters = send_on_enter, esp32_exception_decoder, colorize
@@ -27,10 +24,6 @@ build_flags =
   -DCORE_DEBUG_LEVEL=0
   -DLOG_LEVEL=2
   -Wno-missing-field-initializers
-  ; Backend selection (choose one):
-  ; -DSTATUSLED_BACKEND_NEOPIXELBUS=1
-  ; -DSTATUSLED_BACKEND_IDF_WS2812=1
-  -DSTATUSLED_BACKEND_NEOPIXELBUS=1
   ; Production monitoring (uncomment as needed):
   ; -DCONFIG_FREERTOS_USE_TRACE_FACILITY=1
   ; -DCONFIG_FREERTOS_USE_STATS_FORMATTING_FUNCTIONS=1
@@ -44,7 +37,7 @@ debug_init_break = tbreak setup
 ; ESP32-S3 shared config
 ; -------------------------
 [env:esp32s3dev]
-extends = env
+extends = env:base
 board = esp32-s3-devkitc-1
 board_build.flash_size = 4MB
 board_upload.flash_size = 4MB
@@ -60,7 +53,7 @@ build_flags =
 ; ESP32-S2 shared config
 ; -------------------------
 [env:esp32s2dev]
-extends = env
+extends = env:base
 board = esp32-s2-saola-1
 board_build.flash_size = 4MB
 board_upload.flash_size = 4MB
@@ -74,20 +67,56 @@ build_flags =
 ; Build specific examples
 ; -------------------------
 
-; 01_status_led_cli - Interactive CLI (S3)
-[env:cli_esp32s3]
-extends = esp32s3dev
+; 01_status_led_cli - Interactive CLI (S3, IDF backend - default)
+[env:cli_esp32s3_idf]
+extends = env:esp32s3dev
 board = esp32-s3-devkitc-1
+build_flags =
+  ${env.build_flags}
+  -DSTATUSLED_BACKEND_IDF_WS2812=1
 build_src_filter =
   -<*>
   +<examples/01_status_led_cli/**>
   +<src/**>
   +<include/**>
 
-; 01_status_led_cli - Interactive CLI (S2)
-[env:cli_esp32s2]
-extends = esp32s2dev
+; 01_status_led_cli - Interactive CLI (S2, IDF backend)
+[env:cli_esp32s2_idf]
+extends = env:esp32s2dev
 board = esp32-s2-saola-1
+build_flags =
+  ${env.build_flags}
+  -DSTATUSLED_BACKEND_IDF_WS2812=1
+build_src_filter =
+  -<*>
+  +<examples/01_status_led_cli/**>
+  +<src/**>
+  +<include/**>
+
+; 01_status_led_cli - Interactive CLI (S3, NeoPixelBus backend)
+[env:cli_esp32s3_neopixelbus]
+extends = env:esp32s3dev
+board = esp32-s3-devkitc-1
+lib_deps =
+  makuna/NeoPixelBus@2.7.6
+build_flags =
+  ${env.build_flags}
+  -DSTATUSLED_BACKEND_NEOPIXELBUS=1
+build_src_filter =
+  -<*>
+  +<examples/01_status_led_cli/**>
+  +<src/**>
+  +<include/**>
+
+; 01_status_led_cli - Interactive CLI (S2, NeoPixelBus backend)
+[env:cli_esp32s2_neopixelbus]
+extends = env:esp32s2dev
+board = esp32-s2-saola-1
+lib_deps =
+  makuna/NeoPixelBus@2.7.6
+build_flags =
+  ${env.build_flags}
+  -DSTATUSLED_BACKEND_NEOPIXELBUS=1
 build_src_filter =
   -<*>
   +<examples/01_status_led_cli/**>
@@ -102,6 +131,7 @@ platform = native
 build_flags =
   -DSTATUSLED_BACKEND_NULL=1
   -DSTATUSLED_TEST=1
+  -Iinclude
 build_src_filter =
   +<src/**>
 test_build_src = yes
