--- a/platformio.ini
+++ b/platformio.ini
@@ -2,20 +2,18 @@
 src_dir = .
 default_envs = cli_esp32s3_idf
 
-[env:base]
+[common]
 platform = espressif32@6.12.0
 framework = arduino
 extra_scripts = pre:scripts/generate_version.py
-platform_packages =
-  framework-arduinoespressif32 @ ~3.20017.0
-
+platform_packages = framework-arduinoespressif32 @ ~3.20017.0
 monitor_speed = 115200
 monitor_filters = send_on_enter, esp32_exception_decoder, colorize
 monitor_eol = LF
 monitor_echo = yes
-
 upload_speed = 921600
-
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 build_flags =
   -Wall
   -Wextra
@@ -29,50 +27,33 @@ build_flags =
   ; -DCONFIG_FREERTOS_USE_STATS_FORMATTING_FUNCTIONS=1
   ; -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU0=y
 
-; ESP-PROG / ESP-PROG2
-debug_tool = esp-prog
-debug_init_break = tbreak setup
-
-; -------------------------
-; ESP32-S3 shared config
-; -------------------------
-[env:esp32s3dev]
-extends = env:base
-board = esp32-s3-devkitc-1
-board_build.flash_size = 4MB
-board_upload.flash_size = 4MB
-board_build.partitions = default.csv
-build_flags =
-  ${env.build_flags}
-  -DBOARD_HAS_PSRAM
-  -mfix-esp32-psram-cache-issue
-  -DARDUINO_USB_MODE=1
-  -DARDUINO_USB_CDC_ON_BOOT=1
-
-; -------------------------
-; ESP32-S2 shared config
-; -------------------------
-[env:esp32s2dev]
-extends = env:base
-board = esp32-s2-saola-1
-board_build.flash_size = 4MB
-board_upload.flash_size = 4MB
-board_build.partitions = default.csv
-build_flags =
-  ${env.build_flags}
-  -DARDUINO_USB_MODE=1
-  -DARDUINO_USB_CDC_ON_BOOT=1
-
 ; -------------------------
 ; Build specific examples
 ; -------------------------
 
 ; 01_status_led_cli - Interactive CLI (S3, IDF backend - default)
 [env:cli_esp32s3_idf]
-extends = env:esp32s3dev
+platform = ${common.platform}
+framework = ${common.framework}
+extra_scripts = ${common.extra_scripts}
+platform_packages = ${common.platform_packages}
+monitor_speed = ${common.monitor_speed}
+monitor_filters = ${common.monitor_filters}
+monitor_eol = ${common.monitor_eol}
+monitor_echo = ${common.monitor_echo}
+upload_speed = ${common.upload_speed}
+debug_tool = ${common.debug_tool}
+debug_init_break = ${common.debug_init_break}
 board = esp32-s3-devkitc-1
+board_build.flash_size = 4MB
+board_upload.flash_size = 4MB
+board_build.partitions = default.csv
 build_flags =
-  ${env.build_flags}
+  ${common.build_flags}
+  -DBOARD_HAS_PSRAM
+  -mfix-esp32-psram-cache-issue
+  -DARDUINO_USB_MODE=1
+  -DARDUINO_USB_CDC_ON_BOOT=1
   -DSTATUSLED_BACKEND_IDF_WS2812=1
 build_src_filter =
   -<*>
@@ -82,10 +63,23 @@ build_src_filter =
 
 ; 01_status_led_cli - Interactive CLI (S2, IDF backend)
 [env:cli_esp32s2_idf]
-extends = env:esp32s2dev
+platform = ${common.platform}
+framework = ${common.framework}
+extra_scripts = ${common.extra_scripts}
+platform_packages = ${common.platform_packages}
+monitor_speed = ${common.monitor_speed}
+monitor_filters = ${common.monitor_filters}
+monitor_eol = ${common.monitor_eol}
+monitor_echo = ${common.monitor_echo}
+upload_speed = ${common.upload_speed}
+debug_tool = ${common.debug_tool}
+debug_init_break = ${common.debug_init_break}
 board = esp32-s2-saola-1
+board_build.flash_size = 4MB
+board_upload.flash_size = 4MB
+board_build.partitions = default.csv
 build_flags =
-  ${env.build_flags}
+  ${common.build_flags}
   -DSTATUSLED_BACKEND_IDF_WS2812=1
 build_src_filter =
   -<*>
@@ -95,12 +89,29 @@ build_src_filter =
 
 ; 01_status_led_cli - Interactive CLI (S3, NeoPixelBus backend)
 [env:cli_esp32s3_neopixelbus]
-extends = env:esp32s3dev
+platform = ${common.platform}
+framework = ${common.framework}
+extra_scripts = ${common.extra_scripts}
+platform_packages = ${common.platform_packages}
+monitor_speed = ${common.monitor_speed}
+monitor_filters = ${common.monitor_filters}
+monitor_eol = ${common.monitor_eol}
+monitor_echo = ${common.monitor_echo}
+upload_speed = ${common.upload_speed}
+debug_tool = ${common.debug_tool}
+debug_init_break = ${common.debug_init_break}
 board = esp32-s3-devkitc-1
+board_build.flash_size = 4MB
+board_upload.flash_size = 4MB
+board_build.partitions = default.csv
 lib_deps =
   makuna/NeoPixelBus@2.7.6
 build_flags =
-  ${env.build_flags}
+  ${common.build_flags}
+  -DBOARD_HAS_PSRAM
+  -mfix-esp32-psram-cache-issue
+  -DARDUINO_USB_MODE=1
+  -DARDUINO_USB_CDC_ON_BOOT=1
   -DSTATUSLED_BACKEND_NEOPIXELBUS=1
 build_src_filter =
   -<*>
@@ -110,12 +121,25 @@ build_src_filter =
 
 ; 01_status_led_cli - Interactive CLI (S2, NeoPixelBus backend)
 [env:cli_esp32s2_neopixelbus]
-extends = env:esp32s2dev
+platform = ${common.platform}
+framework = ${common.framework}
+extra_scripts = ${common.extra_scripts}
+platform_packages = ${common.platform_packages}
+monitor_speed = ${common.monitor_speed}
+monitor_filters = ${common.monitor_filters}
+monitor_eol = ${common.monitor_eol}
+monitor_echo = ${common.monitor_echo}
+upload_speed = ${common.upload_speed}
+debug_tool = ${common.debug_tool}
+debug_init_break = ${common.debug_init_break}
 board = esp32-s2-saola-1
+board_build.flash_size = 4MB
+board_upload.flash_size = 4MB
+board_build.partitions = default.csv
 lib_deps =
   makuna/NeoPixelBus@2.7.6
 build_flags =
-  ${env.build_flags}
+  ${common.build_flags}
   -DSTATUSLED_BACKEND_NEOPIXELBUS=1
 build_src_filter =
   -<*>
