--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
+
+      - name: Check text integrity
+        run: python scripts/check_text_integrity.py
 
       - name: Install PlatformIO
         run: |
@@ -46,7 +49,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
+
+      - name: Check text integrity
+        run: python scripts/check_text_integrity.py
 
       - name: Install PlatformIO
         run: |
